# DonCEy-Kong-Jr

./: .gitignore  README.md
client/: CMakeLists.txt  run.bat
client/include/: Platform.h  client_protocol.h  constants.h  input_handler.h  network.h  state_manager.h
client/include/screen/: game_over_screen.h  main_screen.h  player_screen.h  spectator_screen.h
client/src/: Platform.c  input_handler.c  main.c  network.c  state_manager.c
client/src/screen/: game_over_screen.c  main_screen.c  player_screen.c  spectator_screen.c
server/: pom.xml
server/src/main/java/com/doncey/: Main.java
server/src/main/java/com/doncey/admin/: AdminPlayerPanel.java  PlayersPanel.java  ServerGUI.java  ServerPanel.java
server/src/main/java/com/doncey/patterns/factory/: FruitFactory.java  GameEntityFactory.java
server/src/main/java/com/doncey/patterns/observer/: GUIEventObserver.java  GameEventPublisher.java  GameObserver.java
server/src/main/java/com/doncey/server/: ClientHandler.java  Fruit.java  GameServer.java  GameWorld.java  Platform.java  Player.java
server/src/main/java/com/doncey/utils/: Constants.java
